--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
   <title>Modern E-Commerce Admin Panel</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
+  <link href="body.html" rel="stylesheet">
+  <link href="final.html" rel="stylesheet">
   <style>
     body {
       display: flex;
